--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 results/tla9z1ql filter=lfs diff=lfs merge=lfs -text
 results/tla9z1ql/* filter=lfs diff=lfs merge=lfs -text
+data/precomputed.zip filter=lfs diff=lfs merge=lfs -text
